add products.html and added in sidebar

--- a/articles.html
+++ b/articles.html
@@ -33,7 +33,7 @@
                                     </li>
                                     <li><a data-goto=".product" href="#" class="menu__link">Обо мне</a>
                                     </li>
-                                    <li><a data-goto=".courses" href="#" class="menu__link">Каталог</a>
+                                    <li><a href="products.html" class="menu__link">Каталог</a>
                                     </li>
                                     <li><a data-goto=".page__section_3" href="#" class="menu__link">Вопросы и ответы</a>
                                     </li>
