add price.html and _price.scss

--- a/articles.html
+++ b/articles.html
@@ -119,7 +119,7 @@
                             <ul class="menu__list">
                                 <li><a data-goto=".page__section_1" href="#" class="menu__link">Договор оферты</a>
                                 </li>
-                                <li><a data-goto=".page__section_2" href="#" class="menu__link">Общий прайс цен</a>
+                                <li><a href="price.html" class="menu__link">Общий прайс цен</a>
                                 </li>
                                 <li><a data-goto=".product" href="#" class="menu__link">Оплата и доставка</a>
                                 </li>
