--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Межднародный онкологический центр Дмитрия Христолюбова</title>
+    <title>Продукция</title>
 
     <!-- Swiper -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
@@ -116,7 +116,7 @@
                             <ul class="menu__list">
                                 <li><a data-goto=".page__section_1" href="#" class="menu__link">Договор оферты</a>
                                 </li>
-                                <li><a data-goto=".page__section_2" href="#" class="menu__link">Общий прайс цен</a>
+                                <li><a href="price.html" class="menu__link">Общий прайс цен</a>
                                 </li>
                                 <li><a data-goto=".product" href="#" class="menu__link">Оплата и доставка</a>
                                 </li>
