--- a/articles.html
+++ b/articles.html
@@ -123,7 +123,7 @@
                                 </li>
                                 <li><a data-goto=".product" href="#" class="menu__link">Оплата и доставка</a>
                                 </li>
-                                <li><a data-goto=".courses" href="#" class="menu__link">Документы</a>
+                                <li><a href="documents.html" class="menu__link">Документы</a>
                                 </li>
                                 <li><a href="articles.html" class="menu__link">Статьи</a>
                                 </li>
