--- a/index.html
+++ b/index.html
@@ -25,20 +25,24 @@
                                 <ul class="menu__list">
                                     <li><a href="index.html" class="menu__link">Главная</a>
                                     </li>
-                                    <li><a data-goto=".page__section_2" href="#" class="menu__link">Записаться на
+                                    <li><a href="#popup-consultation"
+                                            class="fullscreen__link popup__link assortiment__link menu__link">Записаться
+                                            на
                                             консультацию</a>
                                     </li>
-                                    <li><a data-goto=".product" href="#" class="menu__link">Обо мне</a>
+                                    <li><a href="about.html" class="menu__link">Обо мне</a>
                                     </li>
                                     <li><a href="products.html" class="menu__link">Каталог</a>
                                     </li>
-                                    <li><a data-goto=".page__section_3" href="#" class="menu__link">Вопросы и ответы</a>
+                                    <li><a href="questions.html" class="menu__link">Вопросы и ответы</a>
                                     </li>
-                                    <li><a data-goto=".page__section_3" href="#" class="menu__link">Отзывы</a>
+                                    <li><a href="reviews.html" class="menu__link">Отзывы</a>
                                     </li>
-                                    <li><a data-goto=".decision" href="#" class="menu__link">Написать мне</a>
+                                    <li><a href="#popup-write"
+                                            class="fullscreen__link popup__link assortiment__link menu__link">Написать
+                                            мне</a>
                                     </li>
-                                    <li><a data-goto=".decision" href="#" class="menu__link">Важно</a>
+                                    <li><a href="important.html" class="menu__link">Важно</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -114,13 +118,13 @@
                         </div>
                         <nav class="menu__body menu__body-bottom">
                             <ul class="menu__list">
-                                <li><a data-goto=".page__section_1" href="#" class="menu__link">Договор оферты</a>
+                                <li><a href="contract.html" class="menu__link">Договор оферты</a>
                                 </li>
                                 <li><a href="price.html" class="menu__link">Общий прайс цен</a>
                                 </li>
-                                <li><a data-goto=".product" href="#" class="menu__link">Оплата и доставка</a>
+                                <li><a href="delivery.html" class="menu__link">Оплата и доставка</a>
                                 </li>
-                                <li><a data-goto=".courses" href="#" class="menu__link">Документы</a>
+                                <li><a href="documents.html" class="menu__link">Документы</a>
                                 </li>
                                 <li><a href="articles.html" class="menu__link">Статьи</a>
                                 </li>
@@ -2100,6 +2104,56 @@
                                 <input type="email" name="email" class="form__text _email "
                                     placeholder="Ваша электронная почта:">
                                 <input type="hidden" name="which" id="datePage" value="хочу заказать курс">
+                            </div>
+                            <button type="submit" class="form__submit form__button">Отправить</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="popup-consultation" class="popup">
+            <div class="popup__body">
+                <div class="popup__content">
+                    <div class="popup__bg"></div>
+                    <a href="" class="popup__close close-popup"><span class='close'></span></a>
+                    <div class="popup__title">Запись на консультацию</div>
+                    <div class="popup__forms ">
+                        <form action="#" id='form' class='forms'>
+                            <div class="forms__row">
+                                <input type="text" name="name" class="form__text" placeholder="ФИО:">
+                                <input type="text" name="city" class="form__text" placeholder="Город:">
+                                <input type="tel" name="phone" id='phone' class="form__text _req"
+                                    placeholder="Ваш телефон:">
+                                <input type="text" name="whatsapp" class="form__text" placeholder="Whatsapp:">
+                                <input type="text" name="viber" class="form__text" placeholder="Viber:">
+                                <input type="text" name="skype" class="form__text form__text-last" placeholder="Skype:">
+                                <div class="form__textarea">Опишите проблему</div>
+                                <textarea name="description" id=""></textarea>
+                                <!-- Передать данные для Конкретного инпуста в value передаем данные в письмо -->
+                                <input type="hidden" name="which" id="datePage" value="Хочу записаться на консультацию">
+                            </div>
+                            <button type="submit" class="form__submit form__button">Отправить</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="popup-write" class="popup">
+            <div class="popup__body">
+                <div class="popup__content">
+                    <div class="popup__bg"></div>
+                    <a href="" class="popup__close close-popup"><span class='close'></span></a>
+                    <div class="popup__title">Заказать товар</div>
+                    <div class="popup__forms ">
+                        <form action="#" id='form' class='forms'>
+                            <div class="forms__row">
+                                <input type="text" name="name" class="form__text" placeholder="Ваше имя:">
+                                <input type="tel" name="phone" id='phone' class="form__text _req"
+                                    placeholder="Ваш телефон:">
+                                <input type="email" name="email" class="form__text _email "
+                                    placeholder="Ваша электронная почта:">
+                                <!-- Передать данные для Конкретного инпуста в value передаем данные в письмо -->
+                                <input type="hidden" name="which" id="datePage" value="хочу заказать товар">
                             </div>
                             <button type="submit" class="form__submit form__button">Отправить</button>
                         </form>
