--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Важно знать</title>
+    <title>Контакты</title>
 
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -135,40 +135,9 @@
                 </div>
             </div>
         </section>
-        <div class="important">
+        <div class="contact">
             <div class="container">
-                <div class="important__title">Важно знать</div>
-                <div class="important__text">Сейчас я хочу затронуть «наболевшую тему», связанную с клиниками,
-                    онкоцентрами и лекарствами для лечения рака. Данная тема у всех давно на слуху. Не секрет, что
-                    фармацевтика – это хороший бизнес, а лечение онкологии тем более. Лечение онкологии сейчас стоит
-                    очень дорого. Тысячи и миллионы долларов. И после такого лечения никто не может дать гарантий
-                    исцелится ли человек или нет, будет жить или нет. В практике существует много таких случаев.
-                    Например, взять различных певцов, музыкантов, политиков, бизнесменов. На их лечение страна и
-                    благотворительные фонды выделяют тысячи и миллионы долларов. Лечение не дает результата, либо
-                    результат не на длительный срок.</div>
-                <div class="important__text">Единственный выход из ситуации – это фунготерапия и энерго-информационная
-                    медицина, в частности, грибы и многомерная медицина по методу Пучко Л.Г. Это спасение онкобольных
-                    людей. Грибы помогают даже на 4 стадии с метастазами. После оздоровления ими люди живут еще очень
-                    долго. Грибы способны ликвидировать метастазы, подавить опухоль, а энерго-информационная медицина –
-                    разрушить ДНК раковых клеток и восстановить организм. Грибы не вызывают привыкания, а раковые клетки
-                    не могут приспособиться к ним, поэтому и происходит исцеление. Грибы так же выводят яды и шлаки от
-                    химиотерапии и лучевой терапии, выводят из организма радионуклиды и продукты распада.</div>
-                <div class="important__text">Поэтому не теряйте времени, обращайтесь ко мне, я помогу Вам.</div>
-                <div class="important__bold">Как я занимаюсь оздоровлением:</div>
-                <ul class="important__list">
-                    <li class="important__point">- составляю индивидуальную программу приема грибов под каждого клиента
-                    </li>
-                    <li class="important__point">- устраняю глубинные причины повреждения организма</li>
-                    <li class="important__point">- составляю вибрационные ряды на восстановление организма</li>
-                    <li class="important__point">- работаю с аурой человека. Восстанавливаю ее целостность.</li>
-                    <li class="important__point">- кроме того, вы проходите у себя дома аретотерапию.</li>
-                    <li class="important__text">Помните, что максимальный эффект достигается комплексно: химиотерапия,
-                        облучение, совместно с фунготерапией и многомерной медициной. Это повышает шансы на исцеление и
-                        выживание на 82%-95%! </li>
-                </ul>
-                <div class="important__image">
-                    <img src="img/articles/business.webp" alt="" class="important__img">
-                </div>
+                <div class="contact__title">Контакты</div>
             </div>
         </div>
         <footer class="footer">
