--- a/products.html
+++ b/products.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Продукция</title>
 
-    <!-- Swiper -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -25,22 +23,24 @@
                                 <ul class="menu__list">
                                     <li><a href="index.html" class="menu__link">Главная</a>
                                     </li>
-                                    <li><a href="popup-consultation"
-                                            class="fullscreen__link popup__link assortiment__link menu__link">Записаться
+                                    <li><a href="#popup-consultation"
+                                            class="fullscreen__link popup__link assortiment__link menu__link menu__popup">Записаться
                                             на
                                             консультацию</a>
                                     </li>
-                                    <li><a data-goto=".product" href="#" class="menu__link">Обо мне</a>
+                                    <li><a href="about.html" class="menu__link">Обо мне</a>
                                     </li>
                                     <li><a href="products.html" class="menu__link">Каталог</a>
                                     </li>
-                                    <li><a data-goto=".page__section_3" href="#" class="menu__link">Вопросы и ответы</a>
+                                    <li><a href="questions.html" class="menu__link">Вопросы и ответы</a>
                                     </li>
-                                    <li><a data-goto=".page__section_3" href="#" class="menu__link">Отзывы</a>
+                                    <li><a href="reviews.html" class="menu__link">Отзывы</a>
                                     </li>
-                                    <li><a data-goto=".decision" href="#" class="menu__link">Написать мне</a>
+                                    <li><a href="#popup-write"
+                                            class="fullscreen__link popup__link assortiment__link menu__link menu__popup">Написать
+                                            мне</a>
                                     </li>
-                                    <li><a data-goto=".decision" href="#" class="menu__link">Важно</a>
+                                    <li><a href="important.html" class="menu__link">Важно</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -116,17 +116,17 @@
                         </div>
                         <nav class="menu__body menu__body-bottom">
                             <ul class="menu__list">
-                                <li><a data-goto=".page__section_1" href="#" class="menu__link">Договор оферты</a>
+                                <li><a href="contract.html" class="menu__link">Договор оферты</a>
                                 </li>
                                 <li><a href="price.html" class="menu__link">Общий прайс цен</a>
                                 </li>
-                                <li><a data-goto=".product" href="#" class="menu__link">Оплата и доставка</a>
+                                <li><a href="delivery.html" class="menu__link">Оплата и доставка</a>
                                 </li>
                                 <li><a href="documents.html" class="menu__link">Документы</a>
                                 </li>
                                 <li><a href="articles.html" class="menu__link">Статьи</a>
                                 </li>
-                                <li><a data-goto=".page__section_3" href="#" class="menu__link">Контакты</a>
+                                <li><a href="contact.html" class="menu__link">Контакты</a>
                                 </li>
                             </ul>
                         </nav>
@@ -11609,6 +11609,12 @@
                                 <img src="img/icon/youtube.webp" alt="">
                             </a>
                         </div>
+                        <div class="social__item rutube">
+                            <a href="https://www.youtube.com/channel/UC2ULHY5y8uvWvAZ7kd8dOxg"
+                                class="social__link icon">
+                                <img src="img/icon/rutube.webp" alt="">
+                            </a>
+                        </div>
                         <div class="social__item ok">
                             <a href="https://ok.ru/group/62364975956073" class="social__link icon">
                                 <img src="img/icon/ok.webp" alt="">
@@ -11695,17 +11701,21 @@
                 <div class="popup__content">
                     <div class="popup__bg"></div>
                     <a href="" class="popup__close close-popup"><span class='close'></span></a>
-                    <div class="popup__title">Заказать товар</div>
+                    <div class="popup__title">Запись на консультацию</div>
                     <div class="popup__forms ">
                         <form action="#" id='form' class='forms'>
                             <div class="forms__row">
-                                <input type="text" name="name" class="form__text" placeholder="Ваше имя:">
+                                <input type="text" name="name" class="form__text" placeholder="ФИО:">
+                                <input type="text" name="city" class="form__text" placeholder="Город:">
                                 <input type="tel" name="phone" id='phone' class="form__text _req"
                                     placeholder="Ваш телефон:">
-                                <input type="email" name="email" class="form__text _email "
-                                    placeholder="Ваша электронная почта:">
+                                <input type="text" name="whatsapp" class="form__text" placeholder="Whatsapp:">
+                                <input type="text" name="viber" class="form__text" placeholder="Viber:">
+                                <input type="text" name="skype" class="form__text form__text-last" placeholder="Skype:">
+                                <div class="form__textarea">Опишите проблему</div>
+                                <textarea name="message" id=""></textarea>
                                 <!-- Передать данные для Конкретного инпуста в value передаем данные в письмо -->
-                                <input type="hidden" name="which" id="datePage" value="хочу заказать товар">
+                                <input type="hidden" name="which" id="datePage" value="Хочу записаться на консультацию">
                             </div>
                             <button type="submit" class="form__submit form__button">Отправить</button>
                         </form>
@@ -11718,17 +11728,19 @@
                 <div class="popup__content">
                     <div class="popup__bg"></div>
                     <a href="" class="popup__close close-popup"><span class='close'></span></a>
-                    <div class="popup__title">Заказать товар</div>
+                    <div class="popup__title">Написать мне</div>
                     <div class="popup__forms ">
                         <form action="#" id='form' class='forms'>
                             <div class="forms__row">
                                 <input type="text" name="name" class="form__text" placeholder="Ваше имя:">
-                                <input type="tel" name="phone" id='phone' class="form__text _req"
-                                    placeholder="Ваш телефон:">
-                                <input type="email" name="email" class="form__text _email "
+                                <input type="text" name="city" class="form__text" placeholder="Город:">
+                                <input type="email" name="email" class="form__text _email _req "
                                     placeholder="Ваша электронная почта:">
+                                <input type="text" name="skype" class="form__text form__text-last" placeholder="Skype:">
+                                <div class="form__textarea">Опишите проблему</div>
+                                <textarea name="message" id=""></textarea>
                                 <!-- Передать данные для Конкретного инпуста в value передаем данные в письмо -->
-                                <input type="hidden" name="which" id="datePage" value="хочу заказать товар">
+                                <!-- <input type="hidden" name="which" id="datePage" value="хочу заказать товар"> -->
                             </div>
                             <button type="submit" class="form__submit form__button">Отправить</button>
                         </form>
