--- a/reviews.html
+++ b/reviews.html
@@ -22,7 +22,9 @@
                             <ul class="menu__list">
                                 <li><a href="index.html" class="menu__link">Главная</a>
                                 </li>
-                                <li><a data-goto=".page__section_2" href="#" class="menu__link">Записаться на
+                                <li><a href="#popup-consultation"
+                                        class="fullscreen__link popup__link assortiment__link menu__link menu__popup">Записаться
+                                        на
                                         консультацию</a>
                                 </li>
                                 <li><a href="about.html" class="menu__link">Обо мне</a>
@@ -33,7 +35,9 @@
                                 </li>
                                 <li><a href="reviews.html" class="menu__link">Отзывы</a>
                                 </li>
-                                <li><a data-goto=".decision" href="#" class="menu__link">Написать мне</a>
+                                <li><a href="#popup-write"
+                                        class="fullscreen__link popup__link assortiment__link menu__link menu__popup">Написать
+                                        мне</a>
                                 </li>
                                 <li><a href="important.html" class="menu__link">Важно</a>
                                 </li>
@@ -120,7 +124,7 @@
                             </li>
                             <li><a href="articles.html" class="menu__link">Статьи</a>
                             </li>
-                            <li><a data-goto=".page__section_3" href="#" class="menu__link">Контакты</a>
+                            <li><a href="contact.html" class="menu__link">Контакты</a>
                             </li>
                         </ul>
                     </nav>
@@ -841,6 +845,11 @@
                             <img src="img/icon/youtube.webp" alt="">
                         </a>
                     </div>
+                    <div class="social__item rutube">
+                        <a href="https://www.youtube.com/channel/UC2ULHY5y8uvWvAZ7kd8dOxg" class="social__link icon">
+                            <img src="img/icon/rutube.webp" alt="">
+                        </a>
+                    </div>
                     <div class="social__item ok">
                         <a href="https://ok.ru/group/62364975956073" class="social__link icon">
                             <img src="img/icon/ok.webp" alt="">
@@ -877,6 +886,58 @@
                 заниматься лечебной деятельностью.</div>
         </div>
     </footer>
+    <div id="popup-consultation" class="popup">
+        <div class="popup__body">
+            <div class="popup__content">
+                <div class="popup__bg"></div>
+                <a href="" class="popup__close close-popup"><span class='close'></span></a>
+                <div class="popup__title">Запись на консультацию</div>
+                <div class="popup__forms ">
+                    <form action="#" id='form' class='forms'>
+                        <div class="forms__row">
+                            <input type="text" name="name" class="form__text" placeholder="ФИО:">
+                            <input type="text" name="city" class="form__text" placeholder="Город:">
+                            <input type="tel" name="phone" id='phone' class="form__text _req"
+                                placeholder="Ваш телефон:">
+                            <input type="text" name="whatsapp" class="form__text" placeholder="Whatsapp:">
+                            <input type="text" name="viber" class="form__text" placeholder="Viber:">
+                            <input type="text" name="skype" class="form__text form__text-last" placeholder="Skype:">
+                            <div class="form__textarea">Опишите проблему</div>
+                            <textarea name="message" id=""></textarea>
+                            <!-- Передать данные для Конкретного инпуста в value передаем данные в письмо -->
+                            <input type="hidden" name="which" id="datePage" value="Хочу записаться на консультацию">
+                        </div>
+                        <button type="submit" class="form__submit form__button">Отправить</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="popup-write" class="popup">
+        <div class="popup__body">
+            <div class="popup__content">
+                <div class="popup__bg"></div>
+                <a href="" class="popup__close close-popup"><span class='close'></span></a>
+                <div class="popup__title">Написать мне</div>
+                <div class="popup__forms ">
+                    <form action="#" id='form' class='forms'>
+                        <div class="forms__row">
+                            <input type="text" name="name" class="form__text" placeholder="Ваше имя:">
+                            <input type="text" name="city" class="form__text" placeholder="Город:">
+                            <input type="email" name="email" class="form__text _email _req "
+                                placeholder="Ваша электронная почта:">
+                            <input type="text" name="skype" class="form__text form__text-last" placeholder="Skype:">
+                            <div class="form__textarea">Опишите проблему</div>
+                            <textarea name="message" id=""></textarea>
+                            <!-- Передать данные для Конкретного инпуста в value передаем данные в письмо -->
+                            <!-- <input type="hidden" name="which" id="datePage" value="хочу заказать товар"> -->
+                        </div>
+                        <button type="submit" class="form__submit form__button">Отправить</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="js/script.js"></script>
 </body>
 
