add link rutube in footer and change slider diploma

--- a/important.html
+++ b/important.html
@@ -232,8 +232,7 @@
                             </a>
                         </div>
                         <div class="social__item rutube">
-                            <a href="https://www.youtube.com/channel/UC2ULHY5y8uvWvAZ7kd8dOxg"
-                                class="social__link icon">
+                            <a href="https://rutube.ru/channel/26130293/" class="social__link icon">
                                 <img src="img/icon/rutube.webp" alt="">
                             </a>
                         </div>
