--- a/index.html
+++ b/index.html
@@ -978,37 +978,61 @@
                                         <!-- Слайды которые и будут двигаться -->
                                         <div class="image-slider__slide swiper-slide">
                                             <div class="image-slider__image">
-                                                <img src="img/achievements-1.webp" alt="Картинка"
+                                                <img src="img/documents/diploma/diploma-1.webp" alt="Картинка"
                                                     class="gallery__image">
                                             </div>
                                         </div>
                                         <div class="image-slider__slide swiper-slide">
                                             <div class="image-slider__image">
-                                                <img src="img/achievements-2.webp" alt="Картинка"
+                                                <img src="img/documents/diploma/diploma-4.webp" alt="Картинка"
                                                     class="gallery__image">
                                             </div>
                                         </div>
                                         <div class="image-slider__slide swiper-slide">
                                             <div class="image-slider__image">
-                                                <img src="img/achievements-3.webp" alt="Картинка"
+                                                <img src="img/documents/diploma/diploma-5.webp" alt="Картинка"
                                                     class="gallery__image">
                                             </div>
                                         </div>
                                         <div class="image-slider__slide swiper-slide">
                                             <div class="image-slider__image">
-                                                <img src="img/achievements-4.webp" alt="Картинка"
+                                                <img src="img/documents/diploma/diploma-6.webp" alt="Картинка"
                                                     class="gallery__image">
                                             </div>
                                         </div>
                                         <div class="image-slider__slide swiper-slide">
                                             <div class="image-slider__image">
-                                                <img src="img/achievements-5.webp" alt="Картинка"
+                                                <img src="img/documents/diploma/diploma-7.webp" alt="Картинка"
                                                     class="gallery__image">
                                             </div>
                                         </div>
                                         <div class="image-slider__slide swiper-slide">
                                             <div class="image-slider__image">
-                                                <img src="img/achievements-6.webp" alt="Картинка"
+                                                <img src="img/documents/diploma/diploma-8.webp" alt="Картинка"
+                                                    class="gallery__image">
+                                            </div>
+                                        </div>
+                                        <div class="image-slider__slide swiper-slide">
+                                            <div class="image-slider__image">
+                                                <img src="img/documents/diploma/diploma-9.webp" alt="Картинка"
+                                                    class="gallery__image">
+                                            </div>
+                                        </div>
+                                        <div class="image-slider__slide swiper-slide">
+                                            <div class="image-slider__image">
+                                                <img src="img/documents/diploma/diploma-2.webp" alt="Картинка"
+                                                    class="gallery__image">
+                                            </div>
+                                        </div>
+                                        <div class="image-slider__slide swiper-slide">
+                                            <div class="image-slider__image">
+                                                <img src="img/documents/diploma/diploma-3.webp" alt="Картинка"
+                                                    class="gallery__image">
+                                            </div>
+                                        </div>
+                                        <div class="image-slider__slide swiper-slide">
+                                            <div class="image-slider__image">
+                                                <img src="img/documents/diploma/diploma-10.webp" alt="Картинка"
                                                     class="gallery__image">
                                             </div>
                                         </div>
@@ -2024,8 +2048,7 @@
                             </a>
                         </div>
                         <div class="social__item rutube">
-                            <a href="https://www.youtube.com/channel/UC2ULHY5y8uvWvAZ7kd8dOxg"
-                                class="social__link icon">
+                            <a href="https://rutube.ru/channel/26130293/" class="social__link icon">
                                 <img src="img/icon/rutube.webp" alt="">
                             </a>
                         </div>
