--- a/articles.html
+++ b/articles.html
@@ -10562,16 +10562,6 @@
                     </div>
                 </div>
             </div>
-
-
-
-
-
-
-
-
-
-
         </section>
         <footer class="footer">
             <div class="container">
@@ -10634,8 +10624,7 @@
                             </a>
                         </div>
                         <div class="social__item rutube">
-                            <a href="https://www.youtube.com/channel/UC2ULHY5y8uvWvAZ7kd8dOxg"
-                                class="social__link icon">
+                            <a href="https://rutube.ru/channel/26130293/" class="social__link icon">
                                 <img src="img/icon/rutube.webp" alt="">
                             </a>
                         </div>
